fixing nav wrapping when window is shrunk very small

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -109,6 +109,7 @@ a:hover {
 .header .nav {
 	margin-top: 40px;
 	margin-bottom: 20px;
+	padding-left: 140px;
 	float: right;
 }
 
@@ -118,7 +119,7 @@ a:hover {
 
 .header .nav li {
 	margin-left: 20px;
-	float: left;
+	float: right;
 }
 
 .header .nav a {
